--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin version="2">
   <id>com.github.nrudenko.plugin.ormgenerator</id>
-  <name>Autogenerate schemas for OrmModel inheritans</name>
+  <name>Autogenerate schemas for OrmModel inheritance</name>
   <version>1.0</version>
   <vendor email="r,nikolay.e@gmail.com" url="http://www.yourcompany.com">YourCompany</vendor>
 
